--- a/Jupyter_Notebooks/delivery_time_predictor.ipynb
+++ b/Jupyter_Notebooks/delivery_time_predictor.ipynb
@@ -51,7 +51,8 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.impute import KNNImputer\n",
     "\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from"
    ]
   },
   {
